--- a/Voter/app/build.gradle
+++ b/Voter/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "voltdb.org.voter"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -26,8 +26,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
 
-    // compile 'com.google.android.gms:play-services:8.4.0'
-    //compile 'com.google.android.gms:play-services-location:8.4.0'
+    compile 'com.google.code.gson:gson:2.6.1'
+
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.0.0-RC1'
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
 
     testCompile 'junit:junit:4.12'
 
