--- a/voltdb/build.gradle
+++ b/voltdb/build.gradle
@@ -21,3 +21,21 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// Common properties
+project.ext {
+    compileSdkVersion = 23
+    buildToolsVersion = "23.0.2"
+    minSdkVersion = 21
+    targetSdkVersion = 23
+    versionCode = 1
+    versionName = "1.0"
+
+    sdkVersion = "23.2.1"
+    junitVersion = "4.12"
+    gsonVersion = "2.6.1"
+    retrofitVersion = "2.0.0-beta4"
+    okhttp3LoggingVersion = '3.0.0-RC1'
+    okhttp3Version = '3.1.2'
+
+}
