--- a/voltdb/voter/build.gradle
+++ b/voltdb/voter/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
+        archivesBaseName = "voter-$versionName"
     }
     buildTypes {
         release {
@@ -25,7 +26,8 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:' + rootProject.ext.sdkVersion
     compile 'com.android.support:design:' + rootProject.ext.sdkVersion
-    compile project(':voltdbrestclient')
+    debugCompile project(path: ':voltdbrestclient', configuration: "libraryDebug")
+    releaseCompile project(path: ':voltdbrestclient', configuration: "libraryRelease")
 }
 
 android {
@@ -45,7 +47,12 @@ android {
         }
 
         buildTypes {
+            debug {
+                buildConfigField "boolean", "voter_has_location", "true"
+            }
             release {
+                buildConfigField "boolean", "voter_has_location", "true"
+
                 signingConfig signingConfigs.release
             }
         }
